I had found chi squared incorrectly

--- a/beam-profiling/BeamFitter.ipynb
+++ b/beam-profiling/BeamFitter.ipynb
@@ -119,8 +119,11 @@
     "perr = np.sqrt(np.diag(pcov))\n",
     "\n",
     "# Get chi squared value\n",
-    "chi_squared = np.sum((twoD_Gaussian((x,y), *popt) - np.ravel(data))**2 / (np.ravel(data)))\n",
+    "# chi_squared = np.sum((twoD_Gaussian((x,y), *popt) - np.ravel(data))**2 / (np.ravel(data)))\n",
     "reduced_chi_squared = chi_squared / (len(np.ravel(data)) - len(popt))\n",
+    "\n",
+    "# chi_squared = np.sum((twoD_Gaussian((x,y), *popt) - np.ravel(data))**2 / )\n",
+    "\n",
     "\n",
     "# plot fit\n",
     "data_fitted = twoD_Gaussian((x, y), *popt)\n",
