cleaned up output

--- a/beam-profiling/BeamFitter.ipynb
+++ b/beam-profiling/BeamFitter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "41cb54a1",
    "metadata": {},
    "outputs": [
@@ -28,6 +28,8 @@
     }
    ],
    "source": [
+    "# Pictures taken with Allied Electronics 1800 U-120c camera (pixel size = 3.75 um x 3.75 um)\n",
+    "\n",
     "# Import libraries\n",
     "from PIL import Image\n",
     "import os\n",
@@ -74,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "b915540e",
    "metadata": {
     "scrolled": false
@@ -102,7 +104,8 @@
       "Y0: 503.451 \\pm 0.011\n",
       "sigma_x: 103.626 \\pm 0.013\n",
       "sigma_y: 93.065 \\pm 0.011\n",
-      "offset: 5.341 \\pm 0.003\n"
+      "offset: 5.341 \\pm 0.003\n",
+      "waist (mm): 0.738\n"
      ]
     }
    ],
@@ -132,26 +135,8 @@
     "print('Y0: %3.3f \\pm %3.3f' % (popt[2], perr[2]))\n",
     "print('sigma_x: %3.3f \\pm %3.3f' % (popt[3], perr[3]))\n",
     "print('sigma_y: %3.3f \\pm %3.3f' % (popt[4], perr[4]))\n",
-    "print('offset: %3.3f \\pm %3.3f' % (popt[5], perr[5]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "4907c7c3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Calculate beam waist in millimeters\n",
-    "# TODO: figure out how waist and std dev are related\n",
-    "\n",
-    "# Convert from pixels into mm for Allied Electronics camera 1800 U-120c\n",
-    "# Pixel size of 3.75 um x 3.75 um\n",
-    "\n",
-    "# waist_x = 2*round(popt[3], 3)\n",
-    "\n",
-    "# print('waist_x = ')\n",
-    "\n"
+    "print('offset: %3.3f \\pm %3.3f' % (popt[5], perr[5]))\n",
+    "print('waist (mm): %3.3f' % (2*(popt[3] + popt[4])/2 *3.75*10**(-6)*10**(3)))"
    ]
   },
   {
@@ -200,14 +185,16 @@
     "plt.plot(y0, Iy, label='data')\n",
     "plt.plot(y0, fit_Iy, '-', label='y-fit')\n",
     "plt.title('waist: '+str(2*round(yparams[3],3)))\n",
-    "plt.legend();\n"
+    "plt.legend();"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "id": "d0c19853",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -232,6 +219,7 @@
    ],
    "source": [
     "# Find the mean beam waist for the 401nm light from images in ...\\\\401nm_7.22.22\n",
+    "\n",
     "positions = [14.5, 20, 26, 39.5]\n",
     "x_waists = [192, 188, 198, 214]\n",
     "y_waists = [177, 180, 185, 180]\n",
@@ -249,21 +237,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "90437329",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.10687499999999998"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "3.75*10**(-6)*190/0.5*75"
    ]
